# obs-scene-helper

./: .gitignore  README.md  osh.spec  pyproject.toml
.github/workflows/: python-app.yml
ci/: build_nuitka.py  collect-artifacts.py
res/: README.md  app.icns
src/obs_scene_helper/: __main__.py  app.py
src/obs_scene_helper/controller/actions/: pause_on_screen_lock.py  run_script_on_output_file_change.py  switch_profile_and_scene_collection.py
src/obs_scene_helper/controller/actions/workarounds/macos/: fix_inputs_after_recording_resume.py
src/obs_scene_helper/controller/obs/: connection.py  connection_doctor.py  event_client.py  inputs.py  output_file.py  output_state.py  profiles.py  recording.py  scene_collections.py
src/obs_scene_helper/controller/settings/: settings.py
src/obs_scene_helper/controller/system/: display_list.py  log.py  screen_lock.py  script_launcher.py
src/obs_scene_helper/controller/system/provider/display_list/: qt.py  windows.py
src/obs_scene_helper/controller/system/provider/screen_lock/: macos.py  windows.py
src/obs_scene_helper/model/log/: table.py
src/obs_scene_helper/model/settings/: all_displays.py  obs.py  osh.py  preset.py
src/obs_scene_helper/view/: main_window.py  tray_icon.py
src/obs_scene_helper/view/settings/: obs.py  osh.py  preset.py
src/obs_scene_helper/view/widgets/: app_window.py  editable_list_widget.py  logs.py  named_list.py  preset_list.py  profile_list.py  scene_collection_list.py
tests/: README.md
tests/model/settings/: test_all_displays.py  test_obs.py  test_preset.py
(+2 files in other folders)
